# Cat-Data-Analyst-Deluxe-KK2

./: README.md
KK2/: .gitignore  README.md  pyproject.toml  reflektion.md  start_ui.py
KK2/Assignment Information/: Based Chill To Do Lista.md  KK2-Instructions.md
KK2/app/: __init__.py  config.py  data.py  main.py  schemas.py
KK2/app/chain/: direct_stats.py  pipeline.py  runnable.py  steps.py
KK2/app/tests/: test_chain.py  test_endpoints.py
